// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataViz tests should match snapshot when Reports By Employee is selectedControl 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DataViz
    selectedControl="Reports By Employee"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        undefined,
        <div
          className="selected-div"
>
          
</div>,
        <div
          className="data-viz-cards"
>
          <div>
                    <h2
                              className="data-viz-cards-header"
                    >
                              Select an employee
                    </h2>
                    <div
                              className="data-viz-cards"
                    >
                              <Card
                                        body={
                                                  <button
                                                            onClick={[Function]}
                                                  >
                                                            Select
                                                  </button>
                                        }
                                        cardClickHandler={[Function]}
                                        employeeId={1}
                                        formsBySelector={true}
                                        header="FNBO Building"
                              />
                    </div>
          </div>
</div>,
      ],
      "className": "data-viz",
    },
    "ref": null,
    "rendered": Array [
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            undefined,
            undefined,
          ],
          "className": "selected-div",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          undefined,
          undefined,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div>
            <h2
                        className="data-viz-cards-header"
            >
                        Select an employee
            </h2>
            <div
                        className="data-viz-cards"
            >
                        <Card
                                    body={
                                                <button
                                                            onClick={[Function]}
                                                >
                                                            Select
                                                </button>
                                    }
                                    cardClickHandler={[Function]}
                                    employeeId={1}
                                    formsBySelector={true}
                                    header="FNBO Building"
                        />
            </div>
</div>,
          "className": "data-viz-cards",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2
                className="data-viz-cards-header"
>
                Select an employee
</h2>,
              <div
                className="data-viz-cards"
>
                <Card
                                body={
                                                <button
                                                                onClick={[Function]}
                                                >
                                                                Select
                                                </button>
                                }
                                cardClickHandler={[Function]}
                                employeeId={1}
                                formsBySelector={true}
                                header="FNBO Building"
                />
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Select an employee",
                "className": "data-viz-cards-header",
              },
              "ref": null,
              "rendered": "Select an employee",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  null,
                  Array [
                    <Card
                      body={
                                            <button
                                                                  onClick={[Function]}
                                            >
                                                                  Select
                                            </button>
                      }
                      cardClickHandler={[Function]}
                      employeeId={1}
                      formsBySelector={true}
                      header="FNBO Building"
/>,
                  ],
                ],
                "className": "data-viz-cards",
              },
              "ref": null,
              "rendered": Array [
                null,
                Object {
                  "instance": null,
                  "key": "employee0",
                  "nodeType": "class",
                  "props": Object {
                    "body": <button
                      onClick={[Function]}
>
                      Select
</button>,
                    "cardClickHandler": [Function],
                    "employeeId": 1,
                    "formsBySelector": true,
                    "header": "FNBO Building",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          <div
            className="selected-div"
>
            
</div>,
          <div
            className="data-viz-cards"
>
            <div>
                        <h2
                                    className="data-viz-cards-header"
                        >
                                    Select an employee
                        </h2>
                        <div
                                    className="data-viz-cards"
                        >
                                    <Card
                                                body={
                                                            <button
                                                                        onClick={[Function]}
                                                            >
                                                                        Select
                                                            </button>
                                                }
                                                cardClickHandler={[Function]}
                                                employeeId={1}
                                                formsBySelector={true}
                                                header="FNBO Building"
                                    />
                        </div>
            </div>
</div>,
        ],
        "className": "data-viz",
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              undefined,
              undefined,
            ],
            "className": "selected-div",
          },
          "ref": null,
          "rendered": Array [
            undefined,
            undefined,
            undefined,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div>
              <h2
                            className="data-viz-cards-header"
              >
                            Select an employee
              </h2>
              <div
                            className="data-viz-cards"
              >
                            <Card
                                          body={
                                                        <button
                                                                      onClick={[Function]}
                                                        >
                                                                      Select
                                                        </button>
                                          }
                                          cardClickHandler={[Function]}
                                          employeeId={1}
                                          formsBySelector={true}
                                          header="FNBO Building"
                            />
              </div>
</div>,
            "className": "data-viz-cards",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2
                  className="data-viz-cards-header"
>
                  Select an employee
</h2>,
                <div
                  className="data-viz-cards"
>
                  <Card
                                    body={
                                                      <button
                                                                        onClick={[Function]}
                                                      >
                                                                        Select
                                                      </button>
                                    }
                                    cardClickHandler={[Function]}
                                    employeeId={1}
                                    formsBySelector={true}
                                    header="FNBO Building"
                  />
</div>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Select an employee",
                  "className": "data-viz-cards-header",
                },
                "ref": null,
                "rendered": "Select an employee",
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    null,
                    Array [
                      <Card
                        body={
                                                <button
                                                                        onClick={[Function]}
                                                >
                                                                        Select
                                                </button>
                        }
                        cardClickHandler={[Function]}
                        employeeId={1}
                        formsBySelector={true}
                        header="FNBO Building"
/>,
                    ],
                  ],
                  "className": "data-viz-cards",
                },
                "ref": null,
                "rendered": Array [
                  null,
                  Object {
                    "instance": null,
                    "key": "employee0",
                    "nodeType": "class",
                    "props": Object {
                      "body": <button
                        onClick={[Function]}
>
                        Select
</button>,
                      "cardClickHandler": [Function],
                      "employeeId": 1,
                      "formsBySelector": true,
                      "header": "FNBO Building",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`DataViz tests should match snapshot when Reports By Project is selectedControl 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DataViz
    selectedControl="Reports By Project"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        undefined,
        <div
          className="selected-div"
>
          
</div>,
        <div
          className="data-viz-cards"
>
          <div>
                    <h2
                              className="data-viz-cards-header"
                    >
                              Select a project
                    </h2>
                    <div
                              className="data-viz-cards"
                    >
                              
                    </div>
          </div>
</div>,
      ],
      "className": "data-viz",
    },
    "ref": null,
    "rendered": Array [
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            undefined,
            undefined,
          ],
          "className": "selected-div",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          undefined,
          undefined,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div>
            <h2
                        className="data-viz-cards-header"
            >
                        Select a project
            </h2>
            <div
                        className="data-viz-cards"
            >
                        
            </div>
</div>,
          "className": "data-viz-cards",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2
                className="data-viz-cards-header"
>
                Select a project
</h2>,
              <div
                className="data-viz-cards"
>
                
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Select a project",
                "className": "data-viz-cards-header",
              },
              "ref": null,
              "rendered": "Select a project",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  null,
                  Array [],
                ],
                "className": "data-viz-cards",
              },
              "ref": null,
              "rendered": Array [
                null,
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          <div
            className="selected-div"
>
            
</div>,
          <div
            className="data-viz-cards"
>
            <div>
                        <h2
                                    className="data-viz-cards-header"
                        >
                                    Select a project
                        </h2>
                        <div
                                    className="data-viz-cards"
                        >
                                    
                        </div>
            </div>
</div>,
        ],
        "className": "data-viz",
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              undefined,
              undefined,
            ],
            "className": "selected-div",
          },
          "ref": null,
          "rendered": Array [
            undefined,
            undefined,
            undefined,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div>
              <h2
                            className="data-viz-cards-header"
              >
                            Select a project
              </h2>
              <div
                            className="data-viz-cards"
              >
                            
              </div>
</div>,
            "className": "data-viz-cards",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2
                  className="data-viz-cards-header"
>
                  Select a project
</h2>,
                <div
                  className="data-viz-cards"
>
                  
</div>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Select a project",
                  "className": "data-viz-cards-header",
                },
                "ref": null,
                "rendered": "Select a project",
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    null,
                    Array [],
                  ],
                  "className": "data-viz-cards",
                },
                "ref": null,
                "rendered": Array [
                  null,
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`DataViz tests should match snapshot when selectedControl is All Reports 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DataViz
    selectedControl="All Reports"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        undefined,
        <div
          className="selected-div"
>
          
</div>,
        <div
          className="data-viz-cards"
>
          <Card
                    cardClickHandler={[Function]}
                    formDetails={
                              Array [
                                        "robbie@g.com",
                                        11,
                                        "Mortenson",
                                        "2018-01-07T21:18:12.993Z",
                                        "30 minutes",
                                        true,
                                        true,
                                        true,
                                        undefined,
                                        "xxx",
                                        <img
                                          src="xxx"
                              />,
                                      ]
                    }
                    header="Hotwork Permit - Robbie"
          />
          <Card
                    cardClickHandler={[Function]}
                    formDetails={
                              Array [
                                        "robbie@g.com",
                                        11,
                                        "Mortenson",
                                        "2018-01-07T21:18:12.993Z",
                                        undefined,
                                        undefined,
                                        undefined,
                                        undefined,
                                        undefined,
                                        "xxx",
                                        <img
                                          src="xxx"
                              />,
                                      ]
                    }
                    header="Pretask Permit - Robbie"
          />
</div>,
      ],
      "className": "data-viz",
    },
    "ref": null,
    "rendered": Array [
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            undefined,
            undefined,
          ],
          "className": "selected-div",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          undefined,
          undefined,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Card
              cardClickHandler={[Function]}
              formDetails={
                            Array [
                                          "robbie@g.com",
                                          11,
                                          "Mortenson",
                                          "2018-01-07T21:18:12.993Z",
                                          "30 minutes",
                                          true,
                                          true,
                                          true,
                                          undefined,
                                          "xxx",
                                          <img
                                            src="xxx"
                            />,
                                        ]
              }
              header="Hotwork Permit - Robbie"
/>,
            <Card
              cardClickHandler={[Function]}
              formDetails={
                            Array [
                                          "robbie@g.com",
                                          11,
                                          "Mortenson",
                                          "2018-01-07T21:18:12.993Z",
                                          undefined,
                                          undefined,
                                          undefined,
                                          undefined,
                                          undefined,
                                          "xxx",
                                          <img
                                            src="xxx"
                            />,
                                        ]
              }
              header="Pretask Permit - Robbie"
/>,
          ],
          "className": "data-viz-cards",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "form0",
            "nodeType": "class",
            "props": Object {
              "cardClickHandler": [Function],
              "formDetails": Array [
                "robbie@g.com",
                11,
                "Mortenson",
                "2018-01-07T21:18:12.993Z",
                "30 minutes",
                true,
                true,
                true,
                undefined,
                "xxx",
                <img
                  src="xxx"
/>,
              ],
              "header": "Hotwork Permit - Robbie",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "form1",
            "nodeType": "class",
            "props": Object {
              "cardClickHandler": [Function],
              "formDetails": Array [
                "robbie@g.com",
                11,
                "Mortenson",
                "2018-01-07T21:18:12.993Z",
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                "xxx",
                <img
                  src="xxx"
/>,
              ],
              "header": "Pretask Permit - Robbie",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          <div
            className="selected-div"
>
            
</div>,
          <div
            className="data-viz-cards"
>
            <Card
                        cardClickHandler={[Function]}
                        formDetails={
                                    Array [
                                                "robbie@g.com",
                                                11,
                                                "Mortenson",
                                                "2018-01-07T21:18:12.993Z",
                                                "30 minutes",
                                                true,
                                                true,
                                                true,
                                                undefined,
                                                "xxx",
                                                <img
                                                  src="xxx"
                                    />,
                                              ]
                        }
                        header="Hotwork Permit - Robbie"
            />
            <Card
                        cardClickHandler={[Function]}
                        formDetails={
                                    Array [
                                                "robbie@g.com",
                                                11,
                                                "Mortenson",
                                                "2018-01-07T21:18:12.993Z",
                                                undefined,
                                                undefined,
                                                undefined,
                                                undefined,
                                                undefined,
                                                "xxx",
                                                <img
                                                  src="xxx"
                                    />,
                                              ]
                        }
                        header="Pretask Permit - Robbie"
            />
</div>,
        ],
        "className": "data-viz",
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              undefined,
              undefined,
            ],
            "className": "selected-div",
          },
          "ref": null,
          "rendered": Array [
            undefined,
            undefined,
            undefined,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Card
                cardClickHandler={[Function]}
                formDetails={
                                Array [
                                                "robbie@g.com",
                                                11,
                                                "Mortenson",
                                                "2018-01-07T21:18:12.993Z",
                                                "30 minutes",
                                                true,
                                                true,
                                                true,
                                                undefined,
                                                "xxx",
                                                <img
                                                  src="xxx"
                                />,
                                              ]
                }
                header="Hotwork Permit - Robbie"
/>,
              <Card
                cardClickHandler={[Function]}
                formDetails={
                                Array [
                                                "robbie@g.com",
                                                11,
                                                "Mortenson",
                                                "2018-01-07T21:18:12.993Z",
                                                undefined,
                                                undefined,
                                                undefined,
                                                undefined,
                                                undefined,
                                                "xxx",
                                                <img
                                                  src="xxx"
                                />,
                                              ]
                }
                header="Pretask Permit - Robbie"
/>,
            ],
            "className": "data-viz-cards",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "form0",
              "nodeType": "class",
              "props": Object {
                "cardClickHandler": [Function],
                "formDetails": Array [
                  "robbie@g.com",
                  11,
                  "Mortenson",
                  "2018-01-07T21:18:12.993Z",
                  "30 minutes",
                  true,
                  true,
                  true,
                  undefined,
                  "xxx",
                  <img
                    src="xxx"
/>,
                ],
                "header": "Hotwork Permit - Robbie",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "form1",
              "nodeType": "class",
              "props": Object {
                "cardClickHandler": [Function],
                "formDetails": Array [
                  "robbie@g.com",
                  11,
                  "Mortenson",
                  "2018-01-07T21:18:12.993Z",
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  "xxx",
                  <img
                    src="xxx"
/>,
                ],
                "header": "Pretask Permit - Robbie",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`DataViz tests should match snapshot when selectedControl is Employees 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DataViz
    selectedControl="Employees"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        undefined,
        <div
          className="selected-div"
>
          
</div>,
        <div
          className="data-viz-cards"
>
          <Card
                    body="Underling"
                    cardClickHandler={[Function]}
                    employeeInfo={
                              Array [
                                        "444-444-4445",
                                        "mickjeets@email.com",
                                      ]
                    }
                    header="Mick Jeets"
          />
          <Card
                    body="The Boss"
                    cardClickHandler={[Function]}
                    employeeInfo={
                              Array [
                                        "555-555-5556",
                                        "robbie@email.com",
                                      ]
                    }
                    header="Robbie Griener"
          />
</div>,
      ],
      "className": "data-viz",
    },
    "ref": null,
    "rendered": Array [
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            undefined,
            undefined,
          ],
          "className": "selected-div",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          undefined,
          undefined,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Card
              body="Underling"
              cardClickHandler={[Function]}
              employeeInfo={
                            Array [
                                          "444-444-4445",
                                          "mickjeets@email.com",
                                        ]
              }
              header="Mick Jeets"
/>,
            <Card
              body="The Boss"
              cardClickHandler={[Function]}
              employeeInfo={
                            Array [
                                          "555-555-5556",
                                          "robbie@email.com",
                                        ]
              }
              header="Robbie Griener"
/>,
          ],
          "className": "data-viz-cards",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "employee0",
            "nodeType": "class",
            "props": Object {
              "body": "Underling",
              "cardClickHandler": [Function],
              "employeeInfo": Array [
                "444-444-4445",
                "mickjeets@email.com",
              ],
              "header": "Mick Jeets",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "employee1",
            "nodeType": "class",
            "props": Object {
              "body": "The Boss",
              "cardClickHandler": [Function],
              "employeeInfo": Array [
                "555-555-5556",
                "robbie@email.com",
              ],
              "header": "Robbie Griener",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          <div
            className="selected-div"
>
            
</div>,
          <div
            className="data-viz-cards"
>
            <Card
                        body="Underling"
                        cardClickHandler={[Function]}
                        employeeInfo={
                                    Array [
                                                "444-444-4445",
                                                "mickjeets@email.com",
                                              ]
                        }
                        header="Mick Jeets"
            />
            <Card
                        body="The Boss"
                        cardClickHandler={[Function]}
                        employeeInfo={
                                    Array [
                                                "555-555-5556",
                                                "robbie@email.com",
                                              ]
                        }
                        header="Robbie Griener"
            />
</div>,
        ],
        "className": "data-viz",
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              undefined,
              undefined,
            ],
            "className": "selected-div",
          },
          "ref": null,
          "rendered": Array [
            undefined,
            undefined,
            undefined,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Card
                body="Underling"
                cardClickHandler={[Function]}
                employeeInfo={
                                Array [
                                                "444-444-4445",
                                                "mickjeets@email.com",
                                              ]
                }
                header="Mick Jeets"
/>,
              <Card
                body="The Boss"
                cardClickHandler={[Function]}
                employeeInfo={
                                Array [
                                                "555-555-5556",
                                                "robbie@email.com",
                                              ]
                }
                header="Robbie Griener"
/>,
            ],
            "className": "data-viz-cards",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "employee0",
              "nodeType": "class",
              "props": Object {
                "body": "Underling",
                "cardClickHandler": [Function],
                "employeeInfo": Array [
                  "444-444-4445",
                  "mickjeets@email.com",
                ],
                "header": "Mick Jeets",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "employee1",
              "nodeType": "class",
              "props": Object {
                "body": "The Boss",
                "cardClickHandler": [Function],
                "employeeInfo": Array [
                  "555-555-5556",
                  "robbie@email.com",
                ],
                "header": "Robbie Griener",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`DataViz tests should match snapshot when selectedControl is Projects 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DataViz
    selectedControl="Projects"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        undefined,
        <div
          className="selected-div"
>
          
</div>,
        <div
          className="data-viz-cards"
>
          <Card
                    body="Omaha"
                    cardClickHandler={[Function]}
                    header="FNBO Building"
                    projectInfo={
                              Array [
                                        true,
                                        true,
                                      ]
                    }
          />
          <Card
                    body="Boston"
                    cardClickHandler={[Function]}
                    header="Stadium"
                    projectInfo={
                              Array [
                                        true,
                                        false,
                                      ]
                    }
          />
</div>,
      ],
      "className": "data-viz",
    },
    "ref": null,
    "rendered": Array [
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            undefined,
            undefined,
          ],
          "className": "selected-div",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          undefined,
          undefined,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Card
              body="Omaha"
              cardClickHandler={[Function]}
              header="FNBO Building"
              projectInfo={
                            Array [
                                          true,
                                          true,
                                        ]
              }
/>,
            <Card
              body="Boston"
              cardClickHandler={[Function]}
              header="Stadium"
              projectInfo={
                            Array [
                                          true,
                                          false,
                                        ]
              }
/>,
          ],
          "className": "data-viz-cards",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "project0",
            "nodeType": "class",
            "props": Object {
              "body": "Omaha",
              "cardClickHandler": [Function],
              "header": "FNBO Building",
              "projectInfo": Array [
                true,
                true,
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "project1",
            "nodeType": "class",
            "props": Object {
              "body": "Boston",
              "cardClickHandler": [Function],
              "header": "Stadium",
              "projectInfo": Array [
                true,
                false,
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          <div
            className="selected-div"
>
            
</div>,
          <div
            className="data-viz-cards"
>
            <Card
                        body="Omaha"
                        cardClickHandler={[Function]}
                        header="FNBO Building"
                        projectInfo={
                                    Array [
                                                true,
                                                true,
                                              ]
                        }
            />
            <Card
                        body="Boston"
                        cardClickHandler={[Function]}
                        header="Stadium"
                        projectInfo={
                                    Array [
                                                true,
                                                false,
                                              ]
                        }
            />
</div>,
        ],
        "className": "data-viz",
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              undefined,
              undefined,
            ],
            "className": "selected-div",
          },
          "ref": null,
          "rendered": Array [
            undefined,
            undefined,
            undefined,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Card
                body="Omaha"
                cardClickHandler={[Function]}
                header="FNBO Building"
                projectInfo={
                                Array [
                                                true,
                                                true,
                                              ]
                }
/>,
              <Card
                body="Boston"
                cardClickHandler={[Function]}
                header="Stadium"
                projectInfo={
                                Array [
                                                true,
                                                false,
                                              ]
                }
/>,
            ],
            "className": "data-viz-cards",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "project0",
              "nodeType": "class",
              "props": Object {
                "body": "Omaha",
                "cardClickHandler": [Function],
                "header": "FNBO Building",
                "projectInfo": Array [
                  true,
                  true,
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "project1",
              "nodeType": "class",
              "props": Object {
                "body": "Boston",
                "cardClickHandler": [Function],
                "header": "Stadium",
                "projectInfo": Array [
                  true,
                  false,
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`DataViz tests should render a welcome page when no control is selected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DataViz />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="welcome"
>
          <h1>
                    Welcome to Construction Forms!
          </h1>
          <div
                    className="logo"
          />
</div>,
        <div
          className="selected-div"
>
          
</div>,
        <div
          className="data-viz-cards"
/>,
      ],
      "className": "data-viz",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1>
              Welcome to Construction Forms!
</h1>,
            <div
              className="logo"
/>,
          ],
          "className": "welcome",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Welcome to Construction Forms!",
            },
            "ref": null,
            "rendered": "Welcome to Construction Forms!",
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "logo",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            undefined,
            undefined,
          ],
          "className": "selected-div",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          undefined,
          undefined,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
          "className": "data-viz-cards",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="welcome"
>
            <h1>
                        Welcome to Construction Forms!
            </h1>
            <div
                        className="logo"
            />
</div>,
          <div
            className="selected-div"
>
            
</div>,
          <div
            className="data-viz-cards"
/>,
        ],
        "className": "data-viz",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h1>
                Welcome to Construction Forms!
</h1>,
              <div
                className="logo"
/>,
            ],
            "className": "welcome",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Welcome to Construction Forms!",
              },
              "ref": null,
              "rendered": "Welcome to Construction Forms!",
              "type": "h1",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "logo",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              undefined,
              undefined,
            ],
            "className": "selected-div",
          },
          "ref": null,
          "rendered": Array [
            undefined,
            undefined,
            undefined,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
            "className": "data-viz-cards",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
